@@ -4,7 +4,10 @@ Changelog
 2.0.3 - Unreleased
 ------------------
 
-- Added user login variable '&u' to use in logger message template.
+- Internationalize event trigger types.
+  [tdesvenain]
+
+- Added user login variable '&u' to use in logger action message template.
   [tdesvenain]
 
 2.0.2 - 2010-09-20
